# evadesplus

./: .gitignore  Cargo.toml  README.md  build.rs  config.defaults.toml  config.toml
.cargo/: config.toml
client/: package-lock.json  package.json  tsconfig.json
client/src/: autocomplete.ts  binary_parser.ts  binary_reader.ts  binary_stream.ts  cache.ts  canvas.ts  chat.ts  commands.ts  game_input.ts  hud.ts  input.ts  leaderboard.ts  main.ts  metrics.ts  network_controller.ts  networking.ts  player_info.ts  player_input.ts  rendering.ts  settings.ts  timer.ts  types.ts  ws_connector.ts
maps/: lm.yaml  mm.yaml  nm.yaml  tt.yaml
src/: cache.rs  config.rs  env.rs  lib.rs  main.rs
src/effect_system/: effect.rs  group_table.rs  mod.rs  priority.rs  target.rs  timed_effect.rs  togglable_effect.rs
src/effects/: group_table.rs  id_table.rs  mod.rs  string_tables.rs  target.rs  timed_effect.rs  togglable_effect.rs
src/game/: area.rs  components.rs  data.rs  game.rs  map.rs  map_table.rs  mod.rs  player.rs  portal.rs  systems.rs  templates.rs  timer_sync_packet.rs  transfer_request.rs
src/logger/: mod.rs
src/networking/: chat.rs  commands.rs  helpers.rs  leaderboard.rs  mod.rs  rendering.rs  webtransport.rs
src/parsing/: mod.rs
src/physics/: mod.rs  rect.rs  vec2.rs
src/value/: effects.rs  mod.rs
static/: canvas.js  chat.js  index.html  input.js  leaderboard.js  main.js  metrics.js  networking.js  rendering.js  style.css
static/css/: chat.css  game.css  main.css  metrics.css  minimap.css
static/javascript/: canvas.js  chat.js  commands.js  input.js  (+4 more)
(+22 files in other folders)
