[package]
name = "evadesplus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arc-swap = "1.7.1"
hecs = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
warp = "0.3.7"
wtransport = "0.5.0"
